--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ license = {text = "MIT"}
 requires-python = "3.14"
 dependencies = [
     "django (>=6.0.2,<7.0.0)",
-    "djangorestframework (>=3.16.1,<4.0.0)"
+    "djangorestframework (>=3.16.1,<4.0.0)",
+    "django-cors-headers (>=4.9.0,<5.0.0)"
 ]
 
 
